--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
         "zone.js": "~0.9.1"
     },
     "devDependencies": {
-        "@angular-devkit/build-angular": "^0.803.21",
+        "@angular-devkit/build-angular": "^0.901.4",
         "@angular/cli": "^8.3.21",
-        "@angular/compiler-cli": "^8.2.14",
+        "@angular/compiler-cli": "^9.1.4",
         "@angular/language-service": "^8.2.14",
         "@types/jasmine": "~3.3.8",
         "@types/jasminewd2": "~2.0.3",
@@ -50,7 +50,7 @@
         "codelyzer": "^5.2.1",
         "jasmine-core": "~3.4.0",
         "jasmine-spec-reporter": "~4.2.1",
-        "karma": "~4.1.0",
+        "karma": "^5.0.4",
         "karma-chrome-launcher": "~2.2.0",
         "karma-coverage-istanbul-reporter": "~2.0.1",
         "karma-jasmine": "~2.0.1",
